# syslog-ng

./: Makefile.am  NEWS.md  README.md  configure.ac
.github/workflows/: devshell.yml  macos.yml  nightly-packages.yml  run-on-arm.yml  version-bump.yml
cmake/Modules/: FindGperf.cmake
contrib/: Brewfile  Makefile.am  syslog-ng-gdb.py
contrib/openbsd-packaging/: syslog-ng.conf
dbld/: Makefile.am  README.md  build.manifest  builddeps  functions.sh  generate-rpm-specfile  packages.manifest  rpm  rules
dbld/images/: tarball.dockerfile  ubuntu-groovy.dockerfile  ubuntu-hirsute.dockerfile  ubuntu-xenial.dockerfile
doc/man/: dqtool.1.xml  loggen.1.xml  pdbtool.1.xml  persist-tool.1.xml  secure-logging.7.xml  slogencrypt.1.xml  slogkey.1.xml  slogverify.1.xml  syslog-ng-ctl.1.xml  syslog-ng-debun.1.xml  syslog-ng.8.xml  syslog-ng.conf.5.xml
lib/: cfg-grammar.y  cfg-parser.c  cfg.c
lib/logmsg/: logmsg.c
lib/logthrdest/: logthrdestdrv.c
lib/rewrite/: rewrite-unset.c
lib/tests/: CMakeLists.txt  Makefile.am
modules/: Makefile.am
modules/dummy/: Makefile.am  dummy-grammar.ym  dummy-parser.c  dummy-parser.h  dummy.c  dummy.h
modules/http/: http-worker.c  http.c
modules/kafka/: kafka-dest-driver.c  kafka-dest-worker.c  kafka-dest-worker.h
news/: create-newsfile.py  feature-3948.md
packaging/debian/: changelog  syslog-ng-core.install  syslog-ng.conf
packaging/rhel/: Makefile.am  syslog-ng.conf  syslog-ng.spec
scl/: syslog-ng.conf
scl/cisco/: plugin.conf
scl/snmptrap/: snmptrapd-source.conf
scl/telegram/: telegram.conf
scripts/: style-checker.sh
(+8 files in other folders)
